# LightWatch

./: .gitignore  AppDelegate.swift  CameraManager.swift  DiscordWebhookClient.swift  EventLogger.swift  Info.plist  LightAnalyzer.swift  LightReferenceImageProfile.swift  LightSceneProfile.swift  LightWatchApp.swift  README.md  SettingsNumberFields.swift  SettingsStore.swift  StateMachine.swift  StatusBarController.swift  pyproject.toml
.githooks/: pre-commit
.github/workflows/: build-macos.yml  ci.yml  release.yml
LightWatch.icon/: icon.json
LightWatch.xcodeproj/: project.pbxproj
installer/macos/: build-app.sh
lightwatch/: analyzer.py  app.py  camera.py  headless.py  logger.py  macos.py  main.py  models.py  person_segmenter.py  processor.py  settings.py  settings_window.py  state_machine.py  webhook.py
scripts/: generate-reference-profiles.swift
tests/: test_analyzer.py  test_macos.py  test_release_workflow.py  test_settings.py  test_state_machine.py
