[project]
name = "lightwatch"
version = "0.0.0"
description = "macOS menu bar app that watches camera light changes and sends Discord notifications."
requires-python = ">=3.11"
dependencies = [
    "ai-edge-litert>=2.1.5,<3",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "requests>=2.32",
    "rumps>=0.4; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
]

[project.scripts]
lightwatch = "lightwatch.app:main"

[tool.setuptools.packages.find]
include = ["lightwatch*"]

[tool.setuptools.package-data]
lightwatch = ["assets/*.tflite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
